--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-APP_NAME=Laravel
+APP_NAME=Proyecto13
 APP_ENV=local
-APP_KEY=base64:HQu6g9Sr/SEw40hwN/1iiuYJGfATN2fX67s/m+gt5xI=
+APP_KEY=base64:2Q1yaboyOufTKaKalHoQFGssLFFnhO2syFe4Beu34nU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://proyecto13.local
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=proyecto13
+DB_USERNAME=default
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
